# zkoster

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  zkoster-prd.md
contracts/: README.md
contracts/compliance/: Cargo.toml
contracts/compliance/src/: contract.rs  error.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/payroll/: Cargo.toml
contracts/payroll/src/: clients.rs  contract.rs  error.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: contract.rs  crypto.rs  error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/verifier/tests/: groth16_real.rs
docs/: BATCH_CREATION_BUG_2026-06-29.md  CONFIDENTIAL_SETTLEMENT_HANDOFF.md  CONFIDENTIAL_USDC_SETTLEMENT_HANDOFF.md  SPP_CLAIM_HANDOFF.md
frontend/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/_components/: confidential-amount.tsx  status-badge.tsx  top-bar.tsx  tx-hash-link.tsx  ui.tsx
frontend/app/admin/: actions.ts  page.tsx
frontend/app/admin/batches/[id]/: page.tsx
frontend/app/admin/batches/[id]/_components/: SppDepositStep.tsx  batch-actions.tsx  disclosure-grants-panel.tsx  grant-actions.tsx
frontend/app/admin/batches/new/: page.tsx
frontend/app/admin/batches/new/_components/: new-batch-form.tsx
frontend/app/auditor/: page.tsx
frontend/app/employee/: ClaimFromPool.tsx  actions.ts  page.tsx
frontend/e2e/: payroll-spp-flow.spec.ts
frontend/lib/: config.ts  csv.ts  data.ts  prover.ts  snarkjs.d.ts  types.ts  utils.ts  wallets.ts
frontend/lib/data/: chain-writes.ts  chain.ts  index.ts  metadata.ts  mock.ts
frontend/lib/spp/: config.ts  index.ts  notes.ts  pool-client.ts  types.ts
prover/: Cargo.toml  README.md
prover/src/: lib.rs  main.rs  zkash.rs
prover/tests/: onchain.rs  zkash_interop.rs
scripts/: deploy_spp_testnet.sh  deploy_testnet.sh  package-lock.json  package.json  pay_employee.sh  spp_setup_asp_leaf.sh  zkash_interop.mjs
spp-prover/: Cargo.toml
spp-prover/src/: main.rs  soroban_encode.rs  state.rs
spp-prover/src/routes/: deposit.rs  health.rs  membership.rs  mod.rs  pool_root.rs  withdraw.rs
spp-prover/tests/: encoding.rs  health.rs
