[workspace]
resolver = "2"
members = [
    "contracts/shared",
    "contracts/compliance",
    "contracts/verifier",
    "contracts/payroll",
]
# The prover is a host-side tool (arkworks, std) — not a wasm contract — so it
# lives in its own standalone workspace.
exclude = ["prover"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Zkoster"]

[workspace.dependencies]
soroban-sdk = "26.1.0"
zkoster-types = { path = "contracts/shared" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
