# Standalone workspace — NOT a member of the zkoster contracts workspace.
# Kept isolated because SPP's forked ark-circom conflicts with zkoster's ark-* versions.
[workspace]
members = ["."]
resolver = "2"

[package]
name = "spp-prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spp-prover"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SPP core path deps — isolated workspace, never merged into zkoster root Cargo.toml
# Repointed from C:/temp/spp/... to /tmp/spp/... (Linux rebuild — circuits build.rs
# overflows the stack on Windows/WSL2 cargo 1.96). The handoff doc suggests /opt/spp
# but /opt is root-owned in this env, so we use /tmp/spp. See
# docs/SPP_CLAIM_HANDOFF.md §5 step 4.
prover     = { path = "/tmp/spp/app/crates/core/prover" }
witness    = { path = "/tmp/spp/app/crates/core/witness" }
types      = { path = "/tmp/spp/app/crates/core/types" }

# ScVal encoding (mirrors SPP's stellar crate deps, minus the full stellar client)
stellar-xdr = { version = "26.0.0", features = ["curr", "serde", "std"] }
sha3 = "0.11"
parking_lot = "0.12"
base64 = "0.22"

[dev-dependencies]
axum-test = "15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Required because wasmer/cranelift inside SPP uses a patched cranelift-control.
# Patches must appear in the root workspace Cargo.toml of the crate being built.
# Repointed from C:/temp/spp/vendor/cranelift-control to /tmp/spp/vendor/cranelift-control
# (same reason as the path deps above; see comment on prover/witness/types).
[patch.crates-io]
cranelift-control = { path = "/tmp/spp/vendor/cranelift-control" }
