[package]
name = "zkoster-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
zkoster-types = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Real Groth16 proof generation for the integration test fixture (std-only,
# used by tests/groth16_real.rs). Pinned to the same arkworks line the SDK uses.
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-relations = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-snark = "0.5"
ark-std = "0.5"
